--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,5 @@
 <div class="ui container">
     <h1 style="padding-top: 2rem; text-align: center;">Angular CRUD</h1>
-    <hr>
     <div class="ui form">
         <div class="field">
             <label>Nama Barang</label>
@@ -19,21 +18,48 @@
     <table class="ui celled table">
         <thead>
             <tr>
-                <th>Name</th>
-                <th>Age</th>
-                <th>Job</th>
+                <th>Nama Barang</th>
+                <th>Stok</th>
+                <th>Harga</th>
+                <th class="ui center aligned">Aksi</th>
             </tr>
         </thead>
         <tbody>
             <tr>
-                <td data-label="Name">James</td>
-                <td data-label="Age">24</td>
-                <td data-label="Job">Engineer</td>
+                <td data-label="Nama Barang">James</td>
+                <td data-label="Stok">24</td>
+                <td data-label="Harga">Engineer</td>
+                <td data-label="Aksi" class="ui center aligned">
+                    <div class="ui buttons">
+                        <button class="ui positive button">Edit</button>
+                        <div class="or" data-text="/"></div>
+                        <button class="ui button">Hapus</button>
+                    </div>
+                </td>
             </tr>
             <tr>
-                <td data-label="Name">Jill</td>
-                <td data-label="Age">26</td>
-                <td data-label="Job">Engineer</td>
+                <td data-label="Nama Barang">Jill</td>
+                <td data-label="Stok">26</td>
+                <td data-label="Harga">Engineer</td>
+                <td data-label="Aksi" class="ui center aligned">
+                    <div class="ui buttons">
+                        <button class="ui positive button">Edit</button>
+                        <div class="or" data-text="/"></div>
+                        <button class="ui button">Hapus</button>
+                    </div>
+                </td>
+            </tr>
+            <tr>
+                <td data-label="Nama Barang">Jill</td>
+                <td data-label="Stok">26</td>
+                <td data-label="Harga">Engineer</td>
+                <td data-label="Aksi" class="ui center aligned">
+                    <div class="ui buttons">
+                        <button class="ui positive button">Edit</button>
+                        <div class="or" data-text="/"></div>
+                        <button class="ui button">Hapus</button>
+                    </div>
+                </td>
             </tr>
         </tbody>
     </table>
